# peace-script-backend-services

./: .gitignore  COMMIT_HELPER.ps1  FILE_ORGANIZATION_SUMMARY.md  GIT_DEPLOYMENT_CHECKLIST.md  README_SYSTEM.md  START_SYSTEM.ps1
dmm_backend/dmm_backend/: .dockerignore  .env.example  AI_IMAGE_GENERATION_GUIDE.md  CORE_PROFILE_IMPLEMENTATION.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUCCESS.txt  PHASE3_API_SUCCESS.md  PHASE_2.2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_SECURITY_AUDIT_COMPLETE_04_NOV_2568.md  PHASE_4_DATABASE_BACKUP_COMPLETE_04_NOV_2568.md  PHASE_5_DEPLOYMENT_DOCS_COMPLETE_04_NOV_2568.md  PHASE_6_MONITORING_COMPLETE_04_NOV_2568.md  PRESET_ROUTER_PLAN.md  PRIORITY_2_COMPLETE.md  PROJECT_REFLECTION.md  SESSION_SUMMARY_20251013.md  SYSTEM_TEST_REPORT.md  TASK10_PROGRESS.md  TEST_SUITE_COMPLETION_REPORT.md  VIDEO_QUALITY_GUIDE.md  VOICE_SYNTHESIS_GUIDE.md  WEEK_3_PRIORITY_5_COMPLETE_04_NOV_2568.md  __init__.py  config.py  core_profile_models.py  create_sample_placement_data.py  db_init.py  diagnose_auth_local.py  documents.py  documents.py.bak.duplicate_issue  documents_gallery.py  documents_placement.py  documents_production.py  documents_video.py  fix_e2e_tests.py  fix_integration_tests.py  fix_json_cleaning.py  fix_prompt.py  kamma_appearance_models.py  (+24 more)
dmm_backend/dmm_backend/_legacy_tests_disabled/: test_avatar_e2e.py  test_kamma_engine.py  test_rupa_system.py  test_state_updater.py
dmm_backend/dmm_backend/auth/: models.py
dmm_backend/dmm_backend/core/: __init__.py  ai_provider.py  llm_service.py  logging_config.py  rate_limiter.py  validators.py
(+282 files in other folders)
